# MedVLM

./: .gitignore  README.md  environment.yaml  pyproject.toml  setup.py
medvlm/data/: datamodule.py
medvlm/data/datasets/: dataset_3d_ctrate.py  dataset_3d_uka.py  s3_utils.py
medvlm/data/datasets/augmentations/: augmentations_3d.py
medvlm/models/: base_model.py  medvlm.py  mst.py  mve_2D.py  mve_3D.py  tokenizer.py  vectorquantizer.py
medvlm/models/utils/: functions.py  losses.py
medvlm/utils/: gpu.py  roc_curve.py
scripts/: main_eval.py  main_match_report.py  main_plot.py  main_pred_labels.py  main_pred_labels_prompts.py  main_pred_text.py  main_train.py
scripts/evaluation/: main_plot.py  plot_roc_reports.py
tests/: helper.py
tests/datasets/: test_ctrate.py  test_uka.py
tests/models/: test_gemma3.py  test_llama3.py  test_medvlm.py  test_medvlm_step.py  test_mst.py  test_mve.py  test_mve_data.py  test_tokenizer.py  test_transformer.py
tests/models/tokenizers/: test_llama3.py
