[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "MedVLM"
version = "1.0"
dependencies = [
    "torch==2.6.0",
    "torchvision==0.21.0",
    "pytorch-lightning==2.5.1",
    "torchio==0.20.5",
    "einops==0.8.1",
    "monai==1.4.0",
    "matplotlib==3.10.1",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
    "seaborn==0.13.2",
    "tqdm==4.67.1",
    "wandb==0.19.8",
    "boto3==1.37.23",
    "transformers==4.50.3",
    "vector_quantize_pytorch==1.22.4",
    "x-transformers==2.2.11",
]
dynamic = ["description", "readme", "authors"]
[tool.setuptools.packages.find]
where = ["."]
